<resources>
    <string name="app_name">IranigPractice</string>
    <string name="action_settings">Settings</string>
    <string name="setting">تنظیمات</string>
    <string name="counter">پیشخوان</string>
    <string name="marked">نشان شده</string>
    <string name="category">دسته بندی ها</string>

    <string name="general">عمومی</string>
    <string name="political">سیاسی</string>
    <string name="sports">ورزشی</string>
    <string name="economic">اقتصادی</string>
    <string name="technology">تکنولوژی</string>
    <string name="international">بین المللی</string>

    <string name="telegram_id">\@sajjad_mu</string>

</resources>
