<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/gray50"
    tools:context=".Activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="16dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="16dp"
                        android:src="@drawable/ic_arrow_back_black_24dp"
                        android:tint="@color/text_primary" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@id/iv_back"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:text="@string/setting"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <LinearLayout
                    android:id="@+id/ll_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/list" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/counter"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <LinearLayout
                    android:id="@+id/ll_marked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/marked" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/marked"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <ir.s_mohammadi.iranigpractice.CustomViews.TextViewMedium
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/category"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <ir.s_mohammadi.iranigpractice.CustomViews.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:text="......................................"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_sports"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/sports"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_political"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/political"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_general"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/general"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_international"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/international"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_technology"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/technology"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <ir.s_mohammadi.iranigpractice.CustomViews.TextViewRegular
                        android:id="@+id/tv_economic"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_textsecondary"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/economic"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
